# eon-engine-2D

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  gameengine  notes.txt
assets/scripts/: Level1.lua  myscript.lua
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlledComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidbodyComponent.h  ScriptComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/Editor/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  GameWidget.cpp  GameWidget.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  MainWindow.cpp  MainWindow.h  ScriptEditorPanel.cpp  ScriptEditorPanel.h  main.cpp
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  KeyPressedEvent.h
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderColliderSystem.h  RenderGUISystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
